--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 			</p>
 			<ul class="txt">
 				<li>매월 마지막주 수요일!!!</li>
-				<li>15:30~16:30 태양관측
-				<li>
+				<li>15:30~16:30 태양관측<li>
 				<li>16:30~17:30 가상별자리 여행</li>
 			</ul>
 			<p class="txt">태양관측은 날씨가 좋지 않아 관측이 안될 경우 <br> 천문학 기초강의로 변경됩니다.</p>
@@ -27,8 +26,10 @@
 		</div>
 	</div>
 
-
 	<div class="modal-back"></div>
+
+
+
 
 	<div class="wrap">
 		<!-- 헤더 영역 -->
@@ -39,6 +40,11 @@
 					<img src="images/logo1.png" alt="강원천문대">
 				</a>
 			</h1>
+
+
+
+
+
 			<!-- 메뉴 영역 -->
 			<nav>
 				<ul class="gnb clearfix">
@@ -72,8 +78,16 @@
 					</li>
 				</ul>
 			</nav>
+
+
+
+
 		</header>
 
+
+
+
+		
 		<!-- 슬라이드 이미지 영역 -->
 		<ul class="slide">
 			<li><a href="#"><img src="images/s1.jpg" alt="별과 함께 가족과 함께"></a></li>
@@ -89,11 +103,11 @@
 				<!-- 공지사항 영역 -->
 				<h3 class="on btn-notice"><a href="#">공지사항</a></h3>
 				<ul class="notice on">
-					<li class="open-modal"><a href="#">2019년 8월 문화가 있는 날 안내<span class="day">2019-08-01</span></a></li>
-					<li><a href="#">온라인 예매 시 안내사항<span class="day">2019-09-31</span></a></li>
-					<li><a href="#">2018년 12월 예매 및 휴관일 안내<span class="day">2018-11-20</span></a></li>
-					<li><a href="#">스마트폰 예매시 주의사항 안내<span class="day">2018-10-05</span></a></li>
-					<li><a href="#">결재 관련 설치 프로그램 지원<span class="day">2018-06-02</span></a></li>
+					<li class="open-modal"><a href="#">2024년 12월 문화가 있는 날 안내<span class="day">2024-12-01</span></a></li>
+					<li><a href="#">온라인 예매 시 안내사항<span class="day">2024-12-31</span></a></li>
+					<li><a href="#">2024년 12월 예매 및 휴관일 안내<span class="day">2024-11-20</span></a></li>
+					<li><a href="#">스마트폰 예매시 주의사항 안내<span class="day">2024-10-05</span></a></li>
+					<li><a href="#">결재 관련 설치 프로그램 지원<span class="day">2024-06-02</span></a></li>
 				</ul>
 				<!-- 갤러리 영역 -->
 				<h3 class="gal_txt btn-gal"><a href="#">갤러리</a></h3>
